<resources>
    <string name="app_name">Stockify</string>

    <!-- Splash -->
    <string name="logo">logo</string>
    <string name="version">V %s</string>

    <!-- User  -->
    <string name="error_save_image_user">Failed to save the image</string>
    <string name="error_validate_info_user">You must indicate your name and add a photo</string>
    <string name="title_no_user">WHO ARE YOU?</string>
    <string name="title_content_user">HELLO</string>
    <string name="add_image_user">Add your photo</string>



    <string name="stock">Stock</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="change">Changes</string>
    <string name="results">Results</string>
    <string name="favorites">Favorites</string>
    <string name="user_image">User image</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="set_name">Your name</string>
    <string name="upload_user_image">Upload user image</string>
    <string name="edit_user_image">Edit</string>

    <string name="detail">Detail</string>
    <string name="company">Company Name</string>
    <string name="symbol">Symbol</string>


    <!-- Bottom Menu -->
    <string name="item_menu_user">User</string>
    <string name="item_menu_search">Search</string>
    <string name="item_menu_about">About</string>

    <!-- About -->
    <string name="about_application_id">Application ID  %s</string>
    <string name="about_version">Version  %s</string>

    <!-- Favourite Button -->
    <string name="addButton">Add to favorites</string>
    <string name="removeButton">Remove from favorites </string>

    <!-- Detail -->
    <string name="estimated_eps">Estimated EPS: </string>
    <string name="reported_eps">Reported EPS: </string>
    <string name="fiscal_date_ending">Fiscal date ending: </string>
    <string name="reported_date">Reported date: </string>
    <string name="surprise">Surprise: </string>
    <string name="surprise_percentage">Surprise percentage: </string>

    <string name="toast_loading">LOADING...</string>
    <string name="toast_data_no_found">DATA NO FOUND</string>

</resources>