<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.details.DetailFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/detailsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_header"
        android:layout_width="match_parent"
        android:layout_height="258dp"
        android:background="@drawable/search_decor">

        <TextView
            android:id="@+id/details_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:padding="16dp"
            android:text="@string/detail"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-26dp" />

        <TextView
            android:id="@+id/ttDetailsCompanySymbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="42sp"
            app:layout_constraintTop_toBottomOf="@+id/details_title"
            tools:layout_editor_absoluteX="0dp"
            tools:text="@string/symbol" />

        <TextView
            android:id="@+id/tDetails_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/ttDetailsCompanySymbol"
            tools:layout_editor_absoluteX="0dp"
            tools:text="@string/company" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/favouritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/imgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_button"
            tools:contentDescription="ignore"/>

        <TextView
            android:id="@+id/textButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/imgButton"
            android:text="@string/addButton"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:nestedScrollingEnabled="true"
            android:paddingStart="10dp"
            android:paddingEnd="4dp"
            android:textSize="16sp"
            app:lineHeight="24sp" />

        <TextView
            android:id="@+id/result2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:nestedScrollingEnabled="true"
            android:textSize="16sp"
            app:lineHeight="24sp" />

    </LinearLayout>

</LinearLayout>
